--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.6",
     "@types/formidable": "^1.0.31",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.3",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
@@ -31,6 +32,7 @@
     "express": "^4.17.1",
     "formidable": "^1.2.2",
     "isomorphic-unfetch": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.5",
     "next": "^9.3.1",
     "react": "^16.13.1",
